2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/mips/mips.c: Include rtl-iter.h.
	(mips_small_data_pattern_1): Take an rtx rather than an rtx pointer.
	Take the context as a parameter instead of the containing MEM.
	Iterate over all subrtxes.
	(mips_small_data_pattern_p): Update call accordingly.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/mep/mep.c (mep_mul_hilo_bypass_1): Delete.
	(mep_mul_hilo_bypass_p): Use FOR_EACH_SUBRTX.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/mep/mep.c (mep_store_find_set): Take a const_rtx and
	return a bool.  Replace "void *" with specific type.  Iterate
	over all subrtxes.
	(mep_store_data_bypass_1): Update calls accordingly.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/mep/mep.c: Include rtl-iter.h.
	(global_reg_mentioned_p_1): Take a const_rtx and return a bool.
	(xtensa_tls_referenced_p): Return a bool.  Use FOR_EACH_SUBRTX.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/xtensa/xtensa.c: Include rtl-iter.h.
	(xtensa_tls_referenced_p_1): Delete.
	(xtensa_tls_referenced_p): Use FOR_EACH_SUBRTX.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/sh/sh.c (sh_contains_memref_p_1): Delete.
	(sh_contains_memref_p): Use FOR_EACH_SUBRTX.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/sh/sh-protos.h (shmedia_cleanup_truncate): Take an
	rtx as argument and return the number of changes.
	* config/sh/sh.c: Include rtl-iter.h.
	(shmedia_cleanup_truncate): Take an rtx as argument and iterate
	over all subrtxes.  Return the number of changes made.
	* config/sh/sh.md: Update caller accordingly.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/m68k/m68k.c (m68k_tls_reference_p_1): Delete.
	(m68k_tls_reference_p): Use FOR_EACH_SUBRTX_VAR.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/m68k/m68k.c: Include rtl-iter.h.